@@ -1,5 +1,6 @@
 2006-09-26  Emmanuel Dreyfus  <manu@netbsd.org>
-	* src/racoon/admin.c: Fix memory leak in racoonctl (Coverity)
+	* src/racoon/admin.c: Fix memory leaks in racoonctl (Coverity)
+	* src/racoon/admin.c: Remove dead code (Coverity)
 
 	From Jeff Bailey:
 	* src/racoon/{pfkey.c|proposal.c}: fix SA bundle (e.g.: ESP+IPcomp)
